--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <footer class="mt-5 p-3 text-center bg-light">
-        //onGitHub
+        maksymastapenko.com
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
